--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
         <li><a href="https://darelhilal.com/News/1023221.aspx" target="_blank"><i class="fas fa-book"></i> Book Publication – Dar Al Hilal</a></li>
         <li><a href="https://searchworks.stanford.edu/view/14074488" target="_blank"><i class="fas fa-university"></i> Stanford Library Entry</a></li>
         <li><a href="https://search.library.yale.edu/catalog/16112778?block=Books" target="_blank"><i class="fas fa-university"></i> Yale Library Entry</a></li>
-        <li><a href="https://alarab2030.com/%D8%A7%D9%84%D9%85%D9%88%D8%A7%D8%B7%D9%86%D8%A9-%D9%81%D9%8A-%D8%A7%D9%84%D9%85%D8%AC%D8%AA%D9%85%D8%A7%D8%B9%D8%A7%D8%AA-%D8%A7%D9%84%D8%A3%D9%81%D8%B1%D9%8A%D9%82%D9%8A%D8%A9/" target="_blank"><i class="fas fa-newspaper"></i> Education for Citizenship</a></li>
-        <li><a href="https://alarab2030.com/%D8%A7%D9%84%D8%AA%D8%B9%D9%84%D9%8A%D9%85-%D9%88%D8%A7%D9%84%D8%AD%D8%B1%D8%A7%D9%83-%D8%A7%D8%AC%D8%AA%D9%85%D8%A7%D8%B9%D9%8A-%D8%AA%D8%AD%D8%AF%D9%8A%D8%A7%D8%AA-%D8%A7%D9%84%D9%82/" target="_blank"><i class="fas fa-newspaper"></i> Education & Social Mobility</a></li>
-        <li><a href="https://alarab2030.com/%d8%a7%d9%84%d8%ab%d9%82%d8%a7%d9%81%d8%a9-%d8%a7%d9%84%d8%b9%d8%b1%d8%a8%d9%8a%d8%a9-%d8%a7%d9%84%d8%af%d9%88%d9%84-%d8%a7%d9%84%d8%a3%d9%81%d8%b1%d9%8a%d9%82%d9%8a%d8%a9/" target="_blank"><i class="fas fa-newspaper"></i> Cultural Supremacy Article</a></li>
+        <li><a href="https://alarab2030.com/المواطنة-في-المجتمعات-الأفريقية/" target="_blank"><i class="fas fa-newspaper"></i> Education for Citizenship</a></li>
+        <li><a href="https://alarab2030.com/التعليم-والحراك-الاجتماعي-تحديات-الق/" target="_blank"><i class="fas fa-newspaper"></i> Education & Social Mobility</a></li>
+        <li><a href="https://alarab2030.com/الثقافة-العربية-الدول-الأفريقية/" target="_blank"><i class="fas fa-newspaper"></i> Cultural Supremacy Article</a></li>
       </ul>
     </section>
 
